--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <p>Welcome to my website!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
   <p>where the wild things are</p>
+  <img src="https://www.instagram.com/___peatree___/">
 </body>
 
 </html>
